tests/hm_typing/faulty_namespace_access.sy
A :: blob {}

start :: fn do
    b: a.b.c.D = 0
end

// error: $UnresolvedName(..)
